--- a/src/app/shared/navbar/downdrop/downdrop.component.scss
+++ b/src/app/shared/navbar/downdrop/downdrop.component.scss
@@ -1,21 +1,27 @@
 .dropdown-menu {
-  position: absolute;
-  inset-block-start: calc(100% + 12px);
-  inset-inline-end: 0;
+  position: relative;
+  inset: 13px -6px auto auto !important;
+  border: none;
+  padding: 0;
+  &::after{
+     content: "";
+     position: absolute;
+     inset-block-start: -22px;
+     inset-inline-end: 15px;
+     border: 11px solid;
+     border-color: transparent transparent var(--neutral-50) transparent;
+       filter: drop-shadow(0px 13.62px 27.239px rgba(98,101,119,.2)) drop-shadow(0px -.681px 6.81px rgba(243,243,243,.05));
+
+  }
+
+.downdrop-wrapper {
   background: var(--neutral-50);
   inline-size: 350px;
   max-block-size: 400px;
-  border: none;
   filter: drop-shadow(0px 13.62px 27.239px rgba(98,101,119,.2)) drop-shadow(0px -.681px 6.81px rgba(243,243,243,.05));
   padding: 10px;
-    &::after{
-       content: "";
-       position: absolute;
-       inset-block-start: -23px;
-       inset-inline-end: 15px;
-       border: 11px solid;
-       border-color: transparent transparent var(--neutral-50) transparent;
-    }
+  font-family: "Rubik-Regular";
+  overflow-y: scroll;
   @media screen and (max-width: 576px) {
     position: fixed;
     inset-block-start: 61px;
@@ -25,20 +31,13 @@
     max-block-size: 350px;
 
   }
-  
-
-  .notification-container {
-    font-family: "Rubik-Regular";
-    
-    img {
-      inline-size: 36px;
-      block-size: 36px;
-      border-radius: 50%;
-    }
-   
+ 
     .message-container {
       padding: 10px;
-      
+      .user-img{
+        inline-size: 30px;
+        block-size: 30px;
+      }
       .content {
         &.active {
           .user-name {
@@ -95,4 +94,4 @@
       }   
     }
   }
-}
+} 
