--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -34,3 +34,29 @@ body {
   border-color: none;
  }
 }
+
+ @supports (-webkit-appearance: none) {
+   body{
+     &::-webkit-scrollbar-track {
+      border-radius: 0.625rem;
+      background-color: transparent;
+      -webkit-box-shadow: none;
+      box-shadow: none;
+    }
+
+    &::-webkit-scrollbar {
+      width: 0.3rem;
+      height: 0.3rem;
+      background-color: var(--primary);
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 0.7125rem;
+      background-color: var(--primary);
+      -webkit-box-shadow: none;
+      box-shadow: none;
+    }
+   }
+}
+
+ 
