--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="header-container">
     <div class="menu-icon d-flex justify-content-center align-items-center" >
         <div class="menu-img">
-         <img src="/assets/images/icon/menu.svg" alt="MenuIcon" data-img="svg"  (click)="openSidebar()"/>
+         <img src="/assets/images/icon/menu.svg" alt="MenuIcon" class="img-fluid" data-img="svg"  (click)="openSidebar()"/>
         </div>
         <div class="menu-action d-none d-md-flex justify-content-center align-items-center">
              <button class="btn btn-add ">
