--- a/src/app/shared/navbar/search/search.component.html
+++ b/src/app/shared/navbar/search/search.component.html
@@ -1,13 +1,12 @@
-<div class="search-group position-relative">
-  <a href="">
-     <img src="/assets/images/icon/search.svg" class="search-icon" alt="searchIcon">
-
-  </a>
-  <input
-    id="query"
-    class="input"
-    type="search"
-    placeholder="Search for task and etc."
-    name="searchbar"
-  />
+<div class="search-group input-group d-flex  align-items-center gap-2 ">
+  <div class="img-input">
+         <img src="/assets/images/icon/search.svg" class="img-fluid" alt="searchIcon">
+  </div>
+    <input
+      id="query"
+      class="input"
+      type="search"
+      placeholder="Search for task and etc."
+      name="searchbar"
+    />
 </div>
