--- a/src/app/shared/navbar/search/search.component.scss
+++ b/src/app/shared/navbar/search/search.component.scss
@@ -1,15 +1,17 @@
 .search-group {
-  display: flex;
-  line-height: 28px;
-  align-items: center;
-  max-inline-size: 190px;
+     display: flex;
+    line-height: 28px;
+    max-inline-size: 250px;
+    border: 1px solid var(--neutral-300);
+    border-radius: 100vh;
+    padding: 7px 12px;
+.img-input{
+  inline-size: 30px;
+  block-size: 30px;
 }
-
 .input {
-  max-inline-size: 250px;
-  block-size: 45px;
-  padding-inline-start: 2.5rem;
   border: 0;
+  max-width: 170px;
   background-color: transparent;
   outline: none;
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
@@ -24,13 +26,4 @@
 
 }
 }
-
-.search-icon {
-  position: absolute;
-  inset-inline-start: 1rem;
-  inset-block-start: 1rem;
-  inline-size: 1rem;
-  block-size: 1rem;
-  z-index: 1;
-  cursor: pointer;
 }
