--- a/src/app/shared/navbar/search/search.component.html
+++ b/src/app/shared/navbar/search/search.component.html
@@ -1,10 +1,10 @@
-<div class="search-group input-group d-flex  align-items-center gap-2 ">
+<div class="search-group d-flex  align-items-center gap-2 ">
   <div class="img-input">
          <img src="/assets/images/icon/search.svg" class="img-fluid" alt="searchIcon">
   </div>
     <input
       id="query"
-      class="input"
+      class="input form-control"
       type="search"
       placeholder="Search for task and etc."
       name="searchbar"
